--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>Anlan (Caitlyn) Jiang</h1>
+            <h1>Anlan (Caitlyn)\n Jiang</h1>
             <h2>Student/Software Engineer/Bioinfo</h2>
             <a href="#" class="btn-rounded-white">Download Resume</a>
         </div>
